--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Welcome to headintheclouds</title>
+	<title>Welcome to InfordigiRN</title>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 	<style>
 		body {
@@ -29,7 +29,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Welcome to headintheclouds</h1>
+		<h1>Welcome to InfordigiRN</h1>
 		<p>This is a Docker CI/CD pipeline tutorial using GitHub Actions.</p>
 	</div>
 </body>
